# ispyb-models

./: .bumpversion.cfg  HISTORY.md  README.md  generate_models.sh  requirements.txt  setup.cfg
.github/workflows/: lint.yml  publish.yml  test.yml  update.yml
patches/: circular_references.patch  models.patch
src/ispyb/: __init__.py
src/ispyb/models/: __init__.py  _auto_db_schema.py  _auto_db_schema.py.orig  base.py
tests/: conftest.py  test_models.py
