[metadata]
name = ispyb-models
version = 1.0.6
description = SQLAlchemy ORM models for the ISPyB database
long_description = file: README.md
long_description_content_type = text/markdown
author = ISPyB
author_email = py-ispyb-dev@esrf.fr
license = Apache License, Version 2.0
classifiers =
	Development Status :: 5 - Production/Stable
	License :: OSI Approved :: Apache Software License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules
keywords =
	ISPyB
	database
    SQLAlchemy
url = https://github.com/ispyb/ispyb-models

[options]
include_package_data = True
install_requires =
	mysql-connector-python
	sqlalchemy
packages = find:
package_dir =
	=src
python_requires = >=3.6

[options.packages.find]
where = src

[flake8]
ignore = E501,W503,E203,W504,E251,E262,E265,E266,W291,W293
